slightly revised home.html to be consistent with the manuscript.

--- a/execution/JUMPn_Helpers/html_files/home.html
+++ b/execution/JUMPn_Helpers/html_files/home.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1 style = "position:relative; left:0px; bottom:200px" class="fit-head" >Cluster Genes Groups By WGCNA</h1>
-          <a style = "position:relative; left:0px; bottom:270px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Network Analysis</a>
+          <a style = "position:relative; left:0px; bottom:270px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Analysis</a>
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
       <div class="container">
   <div class="carousel-caption">
     <h1 style = "position:relative; left:0px; bottom:150px" class="fit-head">Modularize Co-Expression Clusters By Protein Interactions</h1>
-    <a style = "position:relative; left:0px; bottom:215px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Network Analysis</a>
+    <a style = "position:relative; left:0px; bottom:215px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Analysis</a>
   </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="carousel-caption">
         <h1 style = "position:relative; left:0px; bottom:300px" class="fit-head">Identify Enriched Pathways and Ontologies from Gene Set</h1>
-        <a style = "position:relative; left:0px; bottom:360px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Network Analysis</a>
+        <a style = "position:relative; left:0px; bottom:360px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Analysis</a>
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="carousel-caption">
         <h1 style = "position:relative; left:0px; bottom:200px" class="fit-head">Find Novel Relationships in Enriched Ontologies</h1>
-        <a style = "position:relative; left:0px; bottom:250px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Network Analysis</a>
+        <a style = "position:relative; left:0px; bottom:250px" class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Commence Analysis</a>
       </div>
     </div>
   </div>
@@ -66,7 +66,7 @@
 <div class="container marketing">
   <div class="row">
   <div class="container" >
-    <h1 class="text-center fit-h1" style="font-size: 4em; margin-bottom: 30px;">Commence Network Analysis!</h1>
+    <h1 class="text-center fit-h1" style="font-size: 4em; margin-bottom: 30px;">Commence Analysis!</h1>
     <a class="btn btn-primary" onclick="$('li:eq(1) a').tab('show');" role="button">Begin JUMPn</a>
   </div>
   </div>
